--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
+
+
 environment:
   sdk: ^3.10.1
 
@@ -29,6 +31,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
@@ -51,6 +55,7 @@ dependencies:
   flutter_dotenv: ^6.0.0
   rxdart: ^0.28.0
   matcher: ^0.12.17
+
 
 dev_dependencies:
   flutter_test:
