--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   table_calendar: ^3.2.0
   font_awesome_flutter: ^10.12.0
   pdf: ^3.11.3
-  printing: 5.11.0
+  printing: ^5.13.0
   firebase_app_check: ^0.4.1+2
   flutter_dotenv: ^6.0.0
   rxdart: ^0.28.0
